# stock-py-playground

./: A股个股网格标的终极筛选表.csv  LICENSE  find_grid_target.py  find_grid_target_stock.py  main.py  pyproject.toml  全市场网格ETF终极选品表.csv
