[project]
name = "stock-py-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.22",
    "jupyterlab>=4.5.3",
    "jupyterlab-vim>=4.1.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.1",
]
